--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <!-- Database connection strings -->
     <string name="development_server_url">https://10.0.0.109:8080/</string>
-    <string name="production_server_url">https://will-chat-assistant.uc.r.appspot.com/</string>
+    <string name="production_server_url">https://chat-assistant-service-dp3py3jxxq-uc.a.run.app/</string>
 </resources>
